fix display alignment and size

--- a/style.css
+++ b/style.css
@@ -29,8 +29,16 @@ body{
   background-color: gainsboro;
   border-style: solid;
   border-width: 10px;
-  text-align: right;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
+.display-content {
+  margin-left: auto;
+  font-size: 30px;
+  margin-right: 20px;
+}
+
 .button-section{
   flex: 5;
   display: flex;
